force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/KQ_Product_Sku__c.field-meta.xml
<CustomField>
    <fullName>KQ_Product_Sku__c</fullName>
    <label>Key Qualifier Product Sku</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>KQ_Product_Sku</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>