force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/KQ_SalesOrderId__c.field-meta.xml
<CustomField>
    <fullName>KQ_SalesOrderId__c</fullName>
    <label>Key Qualifier Sales Order</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>KQ_SalesOrderId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>