force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/Product_Sku__c.field-meta.xml
<CustomField>
    <fullName>Product_Sku__c</fullName>
    <label>Product Sku</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>